tests/invalid/array_zero_size.fl
main :: proc () {
  a: [0]i32;
}
